<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                style="@style/match_parent_layout"
                android:id="@+id/connectingScreen"
                android:gravity="center_horizontal"
                android:background="@android:color/black">



        <be.belgacom.tv.bepandroid.customview.BepTextView
                android:id="@+id/text1"
                app:font="Proximus-Regular.otf"
                style="@style/conctng_scrn_para1"
                android:layout_alignStart="@+id/text2" />

        <be.belgacom.tv.bepandroid.customview.BepTextView
                android:id="@+id/text2"
                app:font="Proximus-Bold.otf"
                style="@style/conctng_scrn_connectingHeading"
                android:text="@string/conctng_scrn_start"
                android:layout_below="@+id/text1" />

        <View
                android:layout_width="500dp"
                android:background="@drawable/gradient"
                android:layout_height="2dp"
                android:id="@+id/view1"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/text2"/>


        <be.belgacom.tv.bepandroid.customview.BepTextView
                android:id="@+id/text3"
                app:font="Proximus-Regular.otf"
                style="@style/conctng_scrn_connecting_para"
                android:layout_marginTop="18dp"
                android:text="@string/conctng_scrn_We_zijn_uw_verbinding_aan_het_controleren"
                android:layout_below="@+id/view1"/>

        <be.belgacom.tv.bepandroid.customview.BepTextView
                android:id="@+id/text4"
                app:font="Proximus-Regular.otf"
                style="@style/conctng_scrn_connecting_para"
                android:text="@string/conctng_scrn_nous_vorifions_votre_connectivite"
                android:layout_below="@+id/text3"
                android:layout_alignStart="@+id/text3" />

        <be.belgacom.tv.bepandroid.customview.BepTextView
                android:id="@+id/text5"
                app:font="Proximus-Regular.otf"
                style="@style/conctng_scrn_connecting_para"
                android:text="@string/conctng_scrn_wir_prufen_lhre_konnektivitat"
                android:layout_below="@+id/text4" />

        <be.belgacom.tv.bepandroid.customview.GIFView
                android:id="@+id/GIFView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text5"
                android:layout_marginTop="18dp"
                android:layout_alignParentLeft="true"
                android:layout_alignEnd="@+id/text3"
                android:layout_alignParentStart="true"
                android:src="@drawable/activityscreenstart"
                android:layerType="software"/>

</RelativeLayout>



